--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     },
     {
@@ -13,10 +13,10 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/app.js"
+      "dest": "/api/index.js"
     },
     {
-      "src": "/(.*\\.(?:css|js|html|ico|jpg|png|svg|woff|woff2))",
+      "src": "/(.*\\.(css|js|html|ico|jpg|png|svg|woff|woff2))",
       "dest": "/public/$1"
     },
     {
